--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>Not rendered</h1>
+      <h1>Loading...</h1>
     </div>
 
     <script type="module" src="/src/app.js"></script>
