--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React</title>
-    <link rel="stylesheet" href="index.css" />
+    <link href="./src/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body>
     <div id="root">
